# COXIT

./: .env.example  .gitignore  README.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: backend-test.yml  build-push.yml  deploy.yml  frontend-test.yml
backend/: .dockerignore  .env.example  Dockerfile  app.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/src/: config.py  exceptions.py  models.py
backend/src/api/: routes.py
backend/src/services/: ai_service.py  pdf_service.py  storage_service.py
backend/tests/: test_api.py  test_pdf_service.py  test_storage_service.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/config/: tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/config/docker/: .dockerignore
frontend/config/npm/: package-lock.json
frontend/src/: App.vue  style.css
frontend/src/components/: PdfUploader.vue  RecentHistory.vue
frontend/src/composables/: useApi.ts  useFileUpload.ts
frontend/src/utils/: formatters.ts
frontend/tests/: setup.ts
frontend/tests/composables/: useApi.test.ts  useFileUpload.test.ts
frontend/tests/utils/: formatters.test.ts
