[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-summary-ai"
version = "1.0.0"
description = "AI-powered PDF summarization service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0", 
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "PyPDF2>=3.0.1",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
]